# tstick

./: .gitignore  Cargo.toml  README.md  emoji.webm  sticker.webm  x.nu
.github/workflows/: release.yml
src/: display.rs  ffmpeg.rs  fs.rs  lib.rs  main.rs
src/cmd/: mod.rs  video.rs
src/util/: byte_size.rs  cmd.rs  duration.rs  error.rs  fs.rs  input.rs  iter.rs  mod.rs  path.rs  testing.rs
src/video/: mod.rs  multi_gen.rs  single_gen.rs  testing.rs  webm_vp9_two_pass.rs
tests/snapshots/ffmpeg_calls/: smoke_all_options.txt
